GET: random flashcard

--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,6 @@
         <em id="answer3"></em><br>
         <em id="answer4"></em><br>
     </div>
-    <button id="show-button">show flashcard</button>
-    <button id="next-flashcard">next flashcard</button>
+    <input type="submit" id="show-button" value= "show flashcard">
 </body>
 </html>
