Added bare bones navbar

--- a/client/index.html
+++ b/client/index.html
@@ -4,13 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/index.css">
-    <script src="./assets/index.js" defer></script>
-    <title>rampant goat page</title>
+    <title>Flashcard display page</title>
+    <script href="./assets/index.js" defer></script>
+    <link rel="stylesheet" href="./assets/styles.css">
 </head>
 <body>
- <!-- Hamburger menu -->
     <!-- Navbar section start -->
+    <nav class="navbar">
+        <a href="#">Home</a>
+        <a href="#">Subjects</a>
+        <a href="#">Help</a>
+        <a href="#">Account</a>
+
+        <!-- Hamburger menu -->
+        <div class="menu-button">&#9776;</div>
+
+        <!-- Hamburger menu container-->
+        <div class="menu">
+            <a href="#">Home</a>
+            <a href="#">Subjects</a>
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+      </div>
+    </nav>
     <!-- Navbar section end -->
     <!-- Flashcard start -->
     <!-- Flashcard end -->
