--- a/client/index.html
+++ b/client/index.html
@@ -11,20 +11,20 @@
 <body>
     <!-- Navbar section start -->
     <nav class="navbar">
-        <a href="#">Home</a>
-        <a href="#">Subjects</a>
-        <a href="#">Help</a>
-        <a href="#">Account</a>
+        <button href="#">Home</button>
+        <button href="#">Subjects</button>
+        <button href="#">Help</button>
+        <button href="#">Account</button>
 
         <!-- Hamburger menu -->
         <div class="menu-button">&#9776;</div>
 
         <!-- Hamburger menu container-->
         <div class="menu">
-            <a href="#">Home</a>
-            <a href="#">Subjects</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
+            <button href="#">Home</button>
+            <button href="#">Subjects</button>
+            <button href="#">About</button>
+            <button href="#">Contact</button>
       </div>
     </nav>
     <!-- Navbar section end -->
