Finished designing background and buttons

--- a/client/index.html
+++ b/client/index.html
@@ -11,11 +11,12 @@
 <body>
     <!-- Navbar section start -->
     <nav class="navbar">
-        <button href="#">Home</button>
-        <button href="#">Subjects</button>
-        <button href="#">Help</button>
-        <button href="#">Account</button>
-
+        <div class="navbar-items">
+            <button href="#">Home</button>
+            <button href="#">Subjects</button>
+            <button href="#">Help</button>
+            <button href="#">Account</button>
+        </div>
         <!-- Hamburger menu -->
         <div class="menu-button">&#9776;</div>
 
