--- a/client/index.html
+++ b/client/index.html
@@ -7,8 +7,12 @@
     <title>Flashcard display page</title>
     <script href="./assets/index.js" defer></script>
     <link rel="stylesheet" href="./assets/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900;1000&display=swap" rel="stylesheet">
 </head>
 <body>
+    <h1 class="title">Rampant Goats</h1>
     <!-- Navbar section start -->
     <nav class="navbar">
         <div class="navbar-items">
