Updated card design

--- a/client/index.html
+++ b/client/index.html
@@ -33,7 +33,20 @@
       </div>
     </nav>
     <!-- Navbar section end -->
+
     <!-- Flashcard start -->
+    <div class="card">
+        <p class="card-name">1.a In which year did the second world war start?</p>
+        <form>
+            <label>What is your favorite color?</label><br>
+            <input type="radio" name="answer" value=""> 1938<br>
+            <input type="radio" name="answer" value=""> 1940<br>
+            <input type="radio" name="answer" value=""> 1939<br>
+            <input type="radio" name="answer" value=""> 1941<br>
+          </form>
+        
+        <button>Submit</button>
+    </div>
     <!-- Flashcard end -->
 </body>
 </html>
