Finished HTML and CSS for flashcard page

--- a/client/index.html
+++ b/client/index.html
@@ -35,17 +35,17 @@
     <!-- Navbar section end -->
 
     <!-- Flashcard start -->
-    <div class="card">
-        <p class="card-name">1.a In which year did the second world war start?</p>
-        <form>
-            <label>What is your favorite color?</label><br>
+    <div class="flashcard">
+        <form class="flashcard-form">
+            <label class="flashcard-name">1.a In which year did the second world war start?</label><br>
             <input type="radio" name="answer" value=""> 1938<br>
             <input type="radio" name="answer" value=""> 1940<br>
             <input type="radio" name="answer" value=""> 1939<br>
             <input type="radio" name="answer" value=""> 1941<br>
           </form>
-        
-        <button>Submit</button>
+        <button id="submit-button">Submit</button>
+        <button id="next-button">Next</button>
+        <button id="previous-button">Previous</button>
     </div>
     <!-- Flashcard end -->
 </body>
