--- a/client/testindex.html
+++ b/client/testindex.html
@@ -15,7 +15,9 @@
         <em id="answer2"></em><br>
         <em id="answer3"></em><br>
         <em id="answer4"></em><br>
-        <input type="submit" id="show-button" value="show Flashcard">
+        <input class="sub-button" type="submit" id="History" value="show Flashcard: History">
+        <input class="sub-button" type="submit" id="Arts" value="show Flashcard: Arts">
+        <input class="sub-button" type="submit" id="Music" value="show Flashcard: Music">
         <input type="submit" id="next-button" value="show next">
     </div>
 </body>
