--- a/client/index-2.html
+++ b/client/index-2.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flashcard display page</title>
-    <script href="./assets/index.js" defer></script>
-    <link rel="stylesheet" href="./assets/styles.css">
+    <script href="./assets/index-2.js" defer></script>
+    <link rel="stylesheet" href="./assets/styles-2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900;1000&display=swap" rel="stylesheet">
