--- a/client/Front-page/index.html
+++ b/client/Front-page/index.html
@@ -10,7 +10,7 @@
 <body>
     
    <div>
-        <img src="./logo.png" alt="A logo of Rampant Goats.">
+        <img src="./logo.png" alt="A logo of Rampant Goats."></div>
         <div id="menu">
         <ul>
             <li id="home"><a href="">Help</a></li>
@@ -19,9 +19,10 @@
             <li><a href="">Home</a></li>
         </ul>
     </div>
-   </div>
    <h3 id="subtitle">Browse Subjects:</h3>
-    
+   <!-- <div id="new-card" > <ul>
+    <li>Create New Flashcard</li>
+   </ul> </div>  -->
     <div class="subjects" id="sub1">
         <h4 class="ptitle" >English</h4>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem tempore omnis aperiam totam ullam vel animi labore corporis, placeat culpa expedita error asperiores explicabo sed suscipit? Recusandae aut facere adipisci.</p>
