--- a/client/index-2.html
+++ b/client/index-2.html
@@ -48,5 +48,10 @@
         <button id="previous-button">Previous</button>
     </div>
     <!-- Flashcard end -->
+    <!-- Progress bar start-->
+    <div class="progress-bar">
+        <progress id="progress" value="75" max="100"></progress>
+    </div>
+    <!-- Progress bar end-->
 </body>
 </html>
