Added logo title at top of page

--- a/client/index-2.html
+++ b/client/index-2.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900;1000&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1 class="title">Rampant Goats</h1>
+    <img id="title-img" src="./images/logo.png"></img>
     <!-- Navbar section start -->
     <nav class="navbar">
         <div class="navbar-items">
