GET: previous flashcard

--- a/client/testindex.html
+++ b/client/testindex.html
@@ -19,6 +19,7 @@
         <input class="sub-button" type="submit" id="Arts" value="show Flashcard: Arts">
         <input class="sub-button" type="submit" id="Music" value="show Flashcard: Music">
         <input type="submit" id="next-button" value="show next">
+        <input type="submit" id="previous-button" value="show previous">
     </div>
 </body>
 </html>
