Updated files from Mark

--- a/client/index-2.html
+++ b/client/index-2.html
@@ -26,7 +26,7 @@
 
         <!-- Hamburger menu container-->
         <div class="menu">
-            <button href="#">Home</button>
+            <button href="#" onclick="openMenu()">Home</button>
             <button href="#">Subjects</button>
             <button href="#">About</button>
             <button href="#">Contact</button>
