index.js merge fix

--- a/client/testindex.html
+++ b/client/testindex.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/index.css">
-    <script src="./assets/index.js" defer></script>
+    <script src="./assets/index-2.js" defer></script>
     <title>rampant goat page</title>
 </head>
 <body>
