Added subheading and new button

--- a/client/Front-page/index.html
+++ b/client/Front-page/index.html
@@ -19,10 +19,10 @@
             <li><a href="">Home</a></li>
         </ul>
     </div>
-   <h3 id="subtitle">Browse Subjects:</h3>
-   <!-- <div id="new-card" > <ul>
-    <li>Create New Flashcard</li>
-   </ul> </div>  -->
+   <div id="sub-heading">
+    <ul><h3 id="subtitle">Browse Subjects:</h3><li id="new-card"><a href="">Create New Flashcard</a></li></ul>
+    <!-- <h3 id="subtitle">Browse Subjects:<ul id="new-card"><li><a href="">Create New Flashcard</a></li></ul></h3> -->
+   </div>
     <div class="subjects" id="sub1">
         <h4 class="ptitle" >English</h4>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem tempore omnis aperiam totam ullam vel animi labore corporis, placeat culpa expedita error asperiores explicabo sed suscipit? Recusandae aut facere adipisci.</p>
