--- a/client/index-2.html
+++ b/client/index-2.html
@@ -16,23 +16,46 @@
     <!-- Navbar section start -->
     <nav class="navbar">
         <div class="navbar-items">
-            <button href="#">Home</button>
-            <button href="#">Subjects</button>
-            <button href="#">Help</button>
-            <button href="#">Account</button>
+            <button>Home</button>
+            <button>Subjects</button>
+            <button id="switch-color">Switch Color</button>
+            <button>Help</button>
+            <button>Account</button>
         </div>
-        <!-- Hamburger menu -->
-        <div class="menu-button">&#9776;</div>
-
-        <!-- Hamburger menu container-->
-        <div class="menu">
-            <button href="#" onclick="openMenu()">Home</button>
-            <button href="#">Subjects</button>
-            <button href="#">About</button>
-            <button href="#">Contact</button>
-      </div>
     </nav>
     <!-- Navbar section end -->
+
+    <!-- Hamburger menu start -->
+    <div class="container">
+        <div class="hamburger-menu">
+            <div class="line line-1"></div>
+            <div class="line line-2"></div>
+            <div class="line line-3"></div>
+        </div>
+    <!-- Hamburger menu end -->
+
+    <!-- Sidebar start -->
+    <section class="sidebar">
+        <ul class="menu">
+            <li class="menu-item">
+                <button class="menu-link">Home</button>
+            </li><br>
+            <li class="menu-item">
+                <button class="menu-link">Subjects</button>
+            </li><br>
+            <li class="menu-item">
+                <button class="menu-link">Switch Color</button>
+            </li><br>
+            <li class="menu-item">
+                <button class="menu-link">Help</button>
+            </li><br>
+            <li class="menu-item">
+                <button class="menu-link">Account</button>
+            </li>
+        </ul>
+    </section>
+    </div>
+    <!-- Sidebar end -->
 
     <!-- Flashcard start -->
     <div class="flashcard">
