--- a/client/index-2.html
+++ b/client/index-2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flashcard display page</title>
-    <script href="./assets/index-2.js" defer></script>
+    <script src="./assets/index-2.js" defer></script>
     <link rel="stylesheet" href="./assets/styles-2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
