Latest sketch up of front page

--- a/client/Front-page/index.html
+++ b/client/Front-page/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rampant Goats</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./account.html">
 </head>
 <body>
     
@@ -21,10 +22,10 @@
     </div>
    <div id="sub-heading">
     <ul><h3 id="subtitle">Browse Subjects:</h3><li id="new-card"><a href="">Create New Flashcard</a></li></ul>
-    <!-- <h3 id="subtitle">Browse Subjects:<ul id="new-card"><li><a href="">Create New Flashcard</a></li></ul></h3> -->
    </div>
     <div class="subjects" id="sub1">
         <h4 class="ptitle" >English</h4>
+        <!-- <img id="eng-img" src="./english img.png" alt="An image of that illustrates literature."> -->
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem tempore omnis aperiam totam ullam vel animi labore corporis, placeat culpa expedita error asperiores explicabo sed suscipit? Recusandae aut facere adipisci.</p>
     </div>
     <div class="subjects" id="sub2">
