Some index-2.html changes

--- a/client/index-2.html
+++ b/client/index-2.html
@@ -60,7 +60,7 @@
     <!-- Flashcard start -->
     <div class="flashcard">
         <form class="flashcard-form">
-            <label class="flashcard-name">1.a In which year did the second world war start?</label><br>
+            <label id="content" class="flashcard-name">1.a In which year did the second world war start?</label><br>
             <input type="radio" name="answer" value=""> 1938<br>
             <input type="radio" name="answer" value=""> 1940<br>
             <input type="radio" name="answer" value=""> 1939<br>
