--- a/client/index-2.html
+++ b/client/index-2.html
@@ -61,10 +61,10 @@
     <div class="flashcard">
         <form class="flashcard-form">
             <label id="content" class="flashcard-name">1.a In which year did the second world war start?</label><br>
-            <input type="radio" name="answer" value=""> 1938<br>
-            <input type="radio" name="answer" value=""> 1940<br>
-            <input type="radio" name="answer" value=""> 1939<br>
-            <input type="radio" name="answer" value=""> 1941<br>
+            <input id="answer1" type="radio" name="answer" value=""> 1938<br>
+            <input id="answer2" type="radio" name="answer" value=""> 1940<br>
+            <input id="answer3" type="radio" name="answer" value=""> 1939<br>
+            <input id="answer4" type="radio" name="answer" value=""> 1941<br>
           </form>
         <button id="submit-button">Submit</button>
         <button id="next-button">Next</button>
