--- a/client/assets/index.html
+++ b/client/assets/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flashcard display page</title>
-    <script href="./assets/index.js" defer></script>
-    <link rel="stylesheet" href="./assets/styles.css">
+    <script src="./index.js" defer></script>
+    <link rel="stylesheet" href="./styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900;1000&display=swap" rel="stylesheet">
@@ -35,18 +35,28 @@
     <!-- Navbar section end -->
 
     <!-- Flashcard start -->
-    <div class="flashcard">
-        <form class="flashcard-form">
-            <label class="flashcard-name">1.a In which year did the second world war start?</label><br>
-            <input type="radio" name="answer" value=""> 1938<br>
-            <input type="radio" name="answer" value=""> 1940<br>
-            <input type="radio" name="answer" value=""> 1939<br>
-            <input type="radio" name="answer" value=""> 1941<br>
-          </form>
-        <button id="submit-button">Submit</button>
-        <button id="next-button">Next</button>
-        <button id="previous-button">Previous</button>
+    <section class ="maincontainer" >
+    <div class="flashcard" id ="flashcard">
+        <div class = "front">
+            <form class="flashcard-form">
+                <label class="flashcard-name">In which year did the second world war start?</label><br>
+                <input type="radio" name="answer" value=""> 1938<br>
+                <input type="radio" name="answer" value=""> 1940<br>
+                <input type="radio" name="answer" value=""> 1939<br>
+                <input type="radio" name="answer" value=""> 1941<br>
+            </form>
+            <button id="submit-button">Submit</button>
+            <button id="next-button">Next</button>
+            <button id="previous-button">Previous</button>
+        </div>
+        <div class = "back">
+            <label class="flashcard-name">In which year did the second world war start?</label><br>
+            <label class="corAnswer">1939</label><br>
+            <button id="next-button">Next</button>
+            <button id="previous-button">Previous</button>
+        </div>
     </div>
+    </section>
     <!-- Flashcard end -->
 </body>
 </html>
