send data to the back end

--- a/client/testindex.html
+++ b/client/testindex.html
@@ -20,6 +20,9 @@
         <input class="sub-button" type="submit" id="Music" value="show Flashcard: Music">
         <input type="submit" id="next-button" value="show next">
         <input type="submit" id="previous-button" value="show previous">
+        <br>
+        <input type="file" id="selectFiles" value="Import" /><br />
+        <button id="import">Import</button>
     </div>
 </body>
 </html>
