Changed a class name

--- a/client/index-2.html
+++ b/client/index-2.html
@@ -59,7 +59,7 @@
 
     <!-- Flashcard start -->
 
-    <section class ="maincontainer" >
+    <section class ="main-container">
         <div class="flashcard" id ="flashcard">
             <div class = "front">
                 <form class="flashcard-form">
