--- a/client/Front-page/account.html
+++ b/client/Front-page/account.html
@@ -13,10 +13,10 @@
         
         <div id="menu">
             <ul>
-                <li id="home"><a href="">Help</a></li>
+                <li><a href="">Help</a></li>
                 <li><a href="">Account</a></li>
                 <li><a href="">Subjects</a></li>
-                <li><a href="">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
             </ul>
     </div>
     <div class="container" >
