--- a/client/Front-page/index.html
+++ b/client/Front-page/index.html
@@ -15,8 +15,8 @@
         <img src="./logo.png" alt="A logo of Rampant Goats."></div>
         <div id="menu">
         <ul>
-            <li id="home"><a href="">Help</a></li>
-            <li><a href="">Account</a></li>
+            <li> <a href="">Help</a></li>
+            <li><a href="./account.html" title="Account page">Account</a></li>
             <li><a href="">Subjects</a></li>
             <li><a href="">Home</a></li>
         </ul>
