--- a/client/testindex.html
+++ b/client/testindex.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/styles-2.css">
+   <!--  <link rel="stylesheet" href="./assets/styles-2.css"> -->
     <script src="./assets/index-2.js" defer></script>
     <title>rampant goat page</title>
 </head>
