--- a/client/index-2.html
+++ b/client/index-2.html
@@ -64,10 +64,11 @@
             <div class = "front">
                 <form class="flashcard-form">
                     <label class="flashcard-name" id = "content"></label><br>
-                    <input type="radio" name="answer1"  id = "answer1"> <br>
-                    <input type="radio" name="answer2"  id = "answer2"> <br>
-                    <input type="radio" name="answer3" id = "answer3"> <br>
-                    <input type="radio" name="answer4"  id = "answer4"> <br>
+                    
+                    <input type="radio" name="answer" ><label id="answer1">Change this text</label><br>
+                    <input type="radio" name="answer"><label id="answer2">Change this text</label><br>
+                    <input type="radio" name="answer"><label id="answer3">Change this text</label> <br>
+                    <input type="radio" name="answer"><label id="answer4">Change this text</label><br>
                 </form>
                 <button id="submit-button">Submit</button>
                 <button id="next-button">Next</button>
