--- a/client/index-2.html
+++ b/client/index-2.html
@@ -64,7 +64,7 @@
             <div class = "front">
                 <form class="flashcard-form">
                     <label class="flashcard-name" id = "content"></label><br>
-                    <input type="radio" name="answer1"  id = "answer1"> <br>
+                    <input type="radio" name="answer1"  id = "answer1"><label id = "answer1"></label> <br>
                     <input type="radio" name="answer2"  id = "answer2"> <br>
                     <input type="radio" name="answer3" id = "answer3"> <br>
                     <input type="radio" name="answer4"  id = "answer4"> <br>
