--- a/client/Front-page/index.html
+++ b/client/Front-page/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rampant Goats</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="./account.html">
-
+    <script src="./index.js"></script>
+    <link rel="stylesheet" href="">
 </head>
 <body>
     
