Create Flashcard page

--- a/client/Front-page/index.html
+++ b/client/Front-page/index.html
@@ -23,7 +23,7 @@
         </ul>
     </div>
    <div id="sub-heading">
-    <ul><h3 id="subtitle">Browse Subjects:</h3><li id="new-card"><a href="">Create New Flashcard</a></li></ul>
+    <ul><h3 id="subtitle">Browse Subjects:</h3><li id="new-card"><a href="./createcard.html">Create New Flashcard</a></li></ul>
    </div>
     <div class="subjects" id="sub1">
         <h4 class="ptitle" >English</h4>
