--- a/client/Front-page/createcard.html
+++ b/client/Front-page/createcard.html
@@ -26,13 +26,13 @@
             <label for="text"><b>Question</b></label><br><br>
              <div id="question"><input type="text" placeholder="Enter Question" name="text" required></div> <br>
             <Label for="text"><p>Answer 1</p></Label>
-              <input type="text" placeholder="Answer 1" name="text" required><br>
+              <input type="text" placeholder="1st Answer" name="text" required><br>
             <label for="text"><p>Answer 2</p></label>
-              <input type="text" placeholder="Answer 2" name="text" required><br><br>
+              <input type="text" placeholder="2nd Answer" name="text" required><br><br>
             <label for="text"><p>Answer 3</p></label>
-              <input type="text" placeholder="Answer 3" name="text" required><br><br>
+              <input type="text" placeholder="3rd Answer" name="text" required><br><br>
             <label for="text"><p>Answer 4</p></label>
-              <input type="text" placeholder="Answer 4" name="text" required><br><br><br>
+              <input type="text" placeholder="4th Answer" name="text" required><br><br><br>
             
             <button>Create Flashcard</button>
         
