changes to button

--- a/client/index-2.html
+++ b/client/index-2.html
@@ -71,8 +71,8 @@
                     <input type="radio" name="answer"><label id="answer4">Change this text</label><br>
                 </form>
                 <button id="submit-button">Submit</button>
-                <button class="next-button">Next</button>
-                <button class="previous-button">Previous</button>
+                <button id="next-button1">Next</button>
+                <button id="previous-button1">Previous</button>
             </div>
             <div class = "back">
                 <label class="flashcard-name" id = "backContent"></label><br>
