changes from remote main

--- a/client/index-2.html
+++ b/client/index-2.html
@@ -89,8 +89,13 @@
         </div>
     </section>
 
-
     <!-- Flashcard end -->
+
+    <!-- Progress bar start -->
+    
+    <progress value="75" max="100"></progress>
+
+    <!-- Progress bar end -->
 </body>
 
 </html>
