Added progress bar with some styling

--- a/client/index-2.html
+++ b/client/index-2.html
@@ -92,9 +92,11 @@
     <!-- Flashcard end -->
 
     <!-- Progress bar start -->
-    
-    <progress value="75" max="100"></progress>
-
+    <div class="wrapper">
+        <div class="progress-bar">
+            <span class="progress-bar-fill" style="width: 70%;"></span>
+        </div>
+    </div>
     <!-- Progress bar end -->
 </body>
 
