add usersession for webpages

--- a/client/Front-page/account.html
+++ b/client/Front-page/account.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Account</title>
     <link rel="stylesheet" href="./account.css">
-    <script src="./assets/account.js" defer></script>
+    <script src="./assets/account.js" defer></script><script src="./assets/userSession.js" defer></script>
 </head>
 <body>
     <div id="logo-img">
@@ -48,5 +48,7 @@
                    <button id="login">Sign in</button>
             </form>
         </div></div>
+
+        <p id="user-session">currently not logged in! </p>
 </body>
 </html>
