--- a/client/Front-page/index.html
+++ b/client/Front-page/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="./account.html">
     <script src="./index.js"></script>
+    <script src="./assets/userSession.js"></script>
     <link rel="stylesheet" href="">
 </head>
 <body>
@@ -42,5 +43,6 @@
        <h4 class="ptitle" ><a href = "../index-2.html?category=Music">Music</a></h4>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem tempore omnis aperiam totam ullam vel animi labore corporis, placeat culpa expedita error asperiores explicabo sed suscipit? Recusandae aut facere adipisci.</p>
     </div>
+    <p id="user-session">currently not logged in! </p>
 </body>
 </html>
