responsive flashcard page

--- a/client/index-2.html
+++ b/client/index-2.html
@@ -65,7 +65,6 @@
     <section class="main-container">
         <div class="flashcard" id="flashcard">
             <div class="front">
-                <p id="counter">sample</p>
                 <form class="flashcard-form">
 
                     <label class="flashcard-name" id="content"></label><br>
@@ -76,17 +75,18 @@
                     <input type="radio" name="answer"><label id="answer4">Change this text</label><br>
                     
                 </form>
-                <button id="submit-button">Submit</button>
-                <button id="next-button1">Next</button>
-                <button id="previous-button1">Previous</button>
+                <button id="submit-button">Submit</button>                
+                <p id="counter">sample</p>
+                <button id="next-button-front">Next</button>
+                <button id="previous-button-front">Previous</button>
             </div>
 
             <div class = "back">
                 <label class="flashcard-name" id = "backContent"></label><br>
                 <label class="corAnswer" id = "corAnswer"></label><br>
 
-                <button id="next-button">Next</button>
-                <button id="previous-button">Previous</button>
+                <button id="next-button-back">Next</button>
+                <button id="previous-button-back">Previous</button>
             </div>
         </div>
     </section>
