--- a/client/Front-page/index.html
+++ b/client/Front-page/index.html
@@ -13,7 +13,7 @@
 <body>
     
    <div>
-        <img src="./logo.png" alt="A logo of Rampant Goats."></div>
+        <img src="./logo.png" id = "title-img" alt="A logo of Rampant Goats."></div>
         <div id="menu">
         <ul>
             <li> <a href="">Help</a></li>
