add signup event

--- a/client/Front-page/account.html
+++ b/client/Front-page/account.html
@@ -24,16 +24,16 @@
         <div class="container1" id="sign-up">
             <form action="">
                 <h2>Sign up</h2><br>
-                <label for="email"><b>Email</b></label><br><br>
-                  <input type="text" placeholder="Enter Email" name="email" required><br><br>
+                <label for="email" ><b>Email</b></label><br><br>
+                  <input type="text" placeholder="Enter Email" id="username-signup" name="email" required><br><br>
 
                  <label for="psw"><b>Password</b></label><br><br>
-                   <input type="password" placeholder="Enter Password" name="psw" required><br><br>
+                   <input type="password" placeholder="Enter Password" name="psw" id= "password-signup" required><br><br>
 
                   <label for="psw-repeat"><b>Repeat Password</b></label><br><br>
-                      <input type="password" placeholder="Repeat Password" name="psw-repeat" required><br><br>
+                      <input type="password" placeholder="Repeat Password" name="psw-repeat" id="verPassword-signup" required><br><br>
 
-                <button>Sign up</button>
+                <button id="sign-up-button">Sign up</button>
             </form>
             <div class="vl"></div>
         </div>
