--- a/client/Front-page/account.html
+++ b/client/Front-page/account.html
@@ -14,9 +14,9 @@
         <div id="menu">
             <ul>
                 <li><a href="">Help</a></li>
-                <li><a href="">Account</a></li>
-                <li><a href="">Subjects</a></li>
-                <li><a href="./index.html">Home</a></li>
+                <li><a href="./account.html">Account</a></li>
+                <li><a href="./subjects.html">Subjects</a></li>
+                <li><a href="./landing-page.html">Home</a></li>
             </ul>
     </div>
     <div class="container" >
