--- a/client/Front-page/createcard.html
+++ b/client/Front-page/createcard.html
@@ -15,8 +15,8 @@
             <ul>
                 <li><a href="">Help</a></li>
                 <li><a href="./account.html">Account</a></li>
-                <li><a href="">Subjects</a></li>
-                <li><a href="./index.html">Home</a></li>
+                <li><a href="./subjects.html">Subjects</a></li>
+                <li><a href="./landing-page.html">Home</a></li>
             </ul>
     </div>
     <div class="container">
