--- a/client/Front-page/subjects.html
+++ b/client/Front-page/subjects.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rampant Goats</title>
-    <link rel="stylesheet" href="./index.css">
+    <title>Rampant Goats - Subjects</title>
+    <link rel="stylesheet" href="./subjects.css">
     <link rel="stylesheet" href="./account.html">
     <script src="./index.js"></script>
     <link rel="stylesheet" href="">
@@ -18,8 +18,8 @@
         <ul>
             <li> <a href="">Help</a></li>
             <li><a href="./account.html" title="Account page">Account</a></li>
-            <li><a href="">Subjects</a></li>
-            <li><a href="">Home</a></li>
+            <li><a href="./subjects.html">Subjects</a></li>
+            <li><a href="./landing-page.html">Home</a></li>
         </ul>
     </div>
    <div id="sub-heading">
