Images added into landing page.

--- a/client/Front-page/landing-page.html
+++ b/client/Front-page/landing-page.html
@@ -22,11 +22,11 @@
         <h2>Welcome To The Rampant Goats Educational Flashcards!</h2>
         <div class="container" >
             <div class="container1" id="sign-up">
-                 <p>Rampant Goats is an excellent educational website for teachers and students. It has an extensive library of flashcards that covers topics from English, music, art and history. Teachers can also create their own flashcards to use in the classroom or to help students learn material outside of class. The flashcards are easy to use and can be tailored to meet the individual needs of each student. This makes Rampant Goats an invaluable educational resource for teachers and students alike.</p>
+                 <p>Rampant Goats is an excellent educational website for teachers and students. It has an extensive library of flashcards that covers topics from English, music, art and history. Teachers can also create their own flashcards to use in the classroom or to help students learn material outside of class. The flashcards are easy to use and can be tailored to meet the individual needs of each student. This makes Rampant Goats an invaluable educational resource for teachers and students alike.</p><br>
                  <img class="images" id="img1" src="./english img.png" alt="" srcset="">
                  <img class="images" id="img2" src="./History.png" alt="" srcset="">
-                 <img class="images" id="img3" src="./english img.png" alt="" srcset="">
-                 <img class="images" id="img4" src="./english img.png" alt="" srcset="">
+                 <img class="images" id="img3" src="./Music.png" alt="" srcset="">
+                 <img class="images" id="img4" src="./Art.png" alt="" srcset="">
         <!-- <p>More features to come include teachers and parental monitor of student learning progress, identification of student weaknesses, different difficulties of learning materials and many more.  </p> -->
             </div>
     </div>
