--- a/client/index-2.html
+++ b/client/index-2.html
@@ -69,10 +69,10 @@
 
                     <label class="flashcard-name" id="content"></label><br>
 
-                    <input type="radio" name="answer"><label id="answer1">Change this text</label><br>
-                    <input type="radio" name="answer"><label id="answer2">Change this text</label><br>
-                    <input type="radio" name="answer"><label id="answer3">Change this text</label> <br>
-                    <input type="radio" name="answer"><label id="answer4">Change this text</label><br>
+                    <input type="radio" name="answer"><label name="to-check" id="answer1">Change this text</label><br>
+                    <input type="radio" name="answer"><label name="to-check"  id="answer2">Change this text</label><br>
+                    <input type="radio" name="answer"><label name="to-check"  id="answer3">Change this text</label> <br>
+                    <input type="radio" name="answer"><label name="to-check"  id="answer4">Change this text</label><br>
                     
                 </form>
                 <button id="submit-button">Submit</button>                
