image pathe changed

--- a/client/index-2.html
+++ b/client/index-2.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <img id="title-img" src="./images/logo.png"></img>
+    <img id="title-img" src="./assets/images/logo.png"></img>
     <!-- Navbar section start -->
     <nav class="navbar">
         <div class="navbar-items">
