Import page added.

--- a/client/Front-page/landing-page.html
+++ b/client/Front-page/landing-page.html
@@ -6,13 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rampant Goats</title>
     <link rel="stylesheet" href="./landing-page.css">
+    <link rel="stylesheet" href="./createcard.html">
+    <link rel="stylesheet" href="./help.html">
+    <link rel="stylesheet" href="./account.html">
+    <link rel="stylesheet" href="./landing-page.html">
+    <link rel="stylesheet" href="./subjects.html">
 </head>
 <body>
     <div>
         <img src="./logo.png" alt="A logo of Rampant Goats."></div>
         <div id="menu">
         <ul>
-            <li> <a href="">Help</a></li>
+            <li> <a href="./help.html">Help</a></li>
             <li><a href="./account.html" title="Account page">Account</a></li>
             <li><a href="./subjects.html">Subjects</a></li>
             <li id="home"><a id="home" href="./landing-page.html">Home</a></li>
