--- a/client/Front-page/help.html
+++ b/client/Front-page/help.html
@@ -7,6 +7,9 @@
     <title>Rampant Goats</title>
     <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="./account.html">
+    <link rel="stylesheet" href="./createcard.html">
+    <link rel="stylesheet" href="./landing-page.html">
+    <link rel="stylesheet" href="./subjects.html">
     <script src="./index.js"></script>
     <link rel="stylesheet" href="">
 </head>
@@ -17,7 +20,7 @@
         <div id="menu">
         <ul>
             
-            <li><a href="">Home</a></li>
+            <li><a href="./landing-page.html">Home</a></li>
         </ul>
     </div>
     <p>
