--- a/client/Front-page/subjects.html
+++ b/client/Front-page/subjects.html
@@ -7,6 +7,8 @@
     <title>Rampant Goats - Subjects</title>
     <link rel="stylesheet" href="./subjects.css">
     <link rel="stylesheet" href="./account.html">
+    <link rel="stylesheet" href="./createcard.html">
+    <link rel="stylesheet" href="./help.html">
     <script src="./index.js"></script>
     <script src="./assets/userSession.js"></script>
     <link rel="stylesheet" href="">
@@ -17,7 +19,7 @@
         <img src="./logo.png" id = "title-img" alt="A logo of Rampant Goats."></div>
         <div id="menu">
         <ul>
-            <li> <a href="">Help</a></li>
+            <li> <a href="./account.html">Help</a></li>
             <li><a href="./account.html" title="Account page">Account</a></li>
             <li><a href="./subjects.html">Subjects</a></li>
             <li><a href="./landing-page.html">Home</a></li>
