--- a/client/Front-page/subjects.html
+++ b/client/Front-page/subjects.html
@@ -26,7 +26,7 @@
         </ul>
     </div>
    <div id="sub-heading">
-    <ul><h3 id="subtitle">Browse Subjects:</h3><li id="new-card"><a href="./createcard.html">Create New Flashcard</a></li></ul>
+    <ul><h3 id="subtitle">Browse Subjects:</h3><li id="new-card"><a href="./createcard.html">Create New Flashcard</a></li><li id="import-btn"><a href="./import.html">Import Flashcard</a></li></ul>
    </div>
     <div class="subjects" id="sub1">
         <h4 class="ptitle" ><a href = "../index-2.html?category=English">English</a></h4>
