create newCard() to make new flashcard

--- a/client/Front-page/createcard.html
+++ b/client/Front-page/createcard.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./landing-page.html">
     <link rel="stylesheet" href="./subjects.html">
     <link rel="stylesheet" href="./account.html">
+    <script src="../assets/newCard.js" defer></script>
 </head>
 <body>
     <div id="logo-img">
