add newCard() functional

--- a/client/Front-page/account.html
+++ b/client/Front-page/account.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,47 +11,53 @@
     <link rel="stylesheet" href="./help.html">
     <link rel="stylesheet" href="./landing-page.html">
     <link rel="stylesheet" href="./subjects.html">
-    <script src="./assets/account.js" defer></script><script src="./assets/userSession.js" defer></script>
+    <script src="./assets/account.js" defer></script>
+    <script src="./assets/userSession.js" defer></script>
 </head>
+
 <body>
     <div id="logo-img">
-        <img src="./logo.png" alt="A logo of Rampant Goats."></div>
-        
-        <div id="menu">
-            <ul>
-                <li><a href="./help.html">Help</a></li>
-                <li><a href="./account.html">Account</a></li>
-                <li><a href="./subjects.html">Subjects</a></li>
-                <li><a href="./landing-page.html">Home</a></li>
-            </ul>
+        <img src="./logo.png" alt="A logo of Rampant Goats.">
     </div>
-    <div class="container" >
+
+    <div id="menu">
+        <ul>
+            <li><a href="./help.html">Help</a></li>
+            <li><a href="./account.html">Account</a></li>
+            <li><a href="./subjects.html">Subjects</a></li>
+            <li><a href="./landing-page.html">Home</a></li>
+        </ul>
+    </div>
+    <div class="container">
         <div class="container1" id="sign-up">
-            <form action="">
-                <h2>Sign up</h2><br>
-                <label for="email" ><b>Email</b></label><br><br>
-                  <input type="text" placeholder="Enter Email" id="username-signup" name="email" required><br><br>
 
-                 <label for="psw"><b>Password</b></label><br><br>
-                   <input type="password" placeholder="Enter Password" name="psw" id= "password-signup" required><br><br>
+            <h2>Sign up</h2><br>
+            <label for="email"><b>Email</b></label><br><br>
+            <input type="text" placeholder="Enter Email" id="username-signup" name="email" required><br><br>
 
-                  <label for="psw-repeat"><b>Repeat Password</b></label><br><br>
-                      <input type="password" placeholder="Repeat Password" name="psw-repeat" id="verPassword-signup" required><br><br>
+            <label for="psw"><b>Password</b></label><br><br>
+            <input type="password" placeholder="Enter Password" name="psw" id="password-signup" required><br><br>
 
-                <button id="sign-up-button">Sign up</button>
-            </form>
+            <label for="psw-repeat"><b>Repeat Password</b></label><br><br>
+            <input type="password" placeholder="Repeat Password" name="psw-repeat" id="verPassword-signup"
+                required><br><br>
+
+            <button id="sign-up-button">Sign up</button>
+
             <div class="vl"></div>
         </div>
         <div class="container2" id="sign-in">
-            <form action="">
-                <h2>Sign in</h2><br>
-                <label for="email"><b>Email</b></label><br><br>
-                  <input type="text" placeholder="Enter Email" name="email" id= "username" required><br><br>
 
-                 <label for="psw"><b>Password</b></label><br><br>
-                   <input type="password" placeholder="Enter Password" name="psw" id="password" required><br><br>
-                   <button id="login">Sign in</button>
-            </form>
-        </div></div>
+            <h2>Sign in</h2><br>
+            <label for="email"><b>Email</b></label><br><br>
+            <input type="text" placeholder="Enter Email" name="email" id="username" required><br><br>
+
+            <label for="psw"><b>Password</b></label><br><br>
+            <input type="password" placeholder="Enter Password" name="psw" id="password" required><br><br>
+            <button id="login">Sign in</button>
+
+        </div>
+    </div>
 </body>
+
 </html>
