Uniform buttons on front page files.

--- a/client/Front-page/help.html
+++ b/client/Front-page/help.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rampant Goats</title>
-
+    <link rel="stylesheet" href="./help.css">
     <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="./account.html">
     <link rel="stylesheet" href="./createcard.html">
@@ -17,15 +17,20 @@
 </head>
 <body>
     
-   <div>
-        <img src="./logo.png" id = "title-img" alt="A logo of Rampant Goats."></div>
+    <div>
+        <img id="logo-img" src="./logo.png" id = "title-img" alt="A logo of Rampant Goats."></div>
+
         <div id="menu">
         <ul>
-
+            <li> <a href="./account.html">Help</a></li>
+            <li><a href="./account.html" >Account</a></li>
+            <li><a href="./subjects.html">Subjects</a></li>
             <li><a href="./landing-page.html">Home</a></li>
-
         </ul>
-    </div>
+    </div></div>
+    <div class="container">
+    <h2>A guide on Rampant Goats Flashcards</h2>
+   <div>
     <p>
         This guide is here to help you navigate through the app. <br>
 The <em><strong>“Categories” </strong></em> section describes all the subjects you can learn. Choose one to open a page with flashcards dedicated to that subject. <br>
@@ -37,7 +42,7 @@ When you use the flashcards: <br>
 At the bottom of the screen you can see your progress.<br>
 At the end of each batch of flashcards you will see your score.<br> 
 
-    </p>
-   
+    </p></div>
+   </div>
 </body>
 </html>
