--- a/client/Front-page/landing-page.html
+++ b/client/Front-page/landing-page.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div>
-        <img src="./logo.png" alt="A logo of Rampant Goats."></div>
+        <img id="logo-img" src="./logo.png" alt="A logo of Rampant Goats."></div>
         <div id="menu">
         <ul>
             <li> <a href="./help.html">Help</a></li>
