--- a/client/Front-page/createcard.html
+++ b/client/Front-page/createcard.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div id="logo-img">
-        <img src="./logo.png" alt="A logo of Rampant Goats."></div>
+        <img id="logo-img" src="./logo.png" alt="A logo of Rampant Goats."></div>
         
         <div id="menu">
             <ul>
