--- a/client/Front-page/import.html
+++ b/client/Front-page/import.html
@@ -9,8 +9,8 @@
     
 </head>
 <body>
-    <div id="logo-img">
-        <img src="./logo.png" alt="A logo of Rampant Goats."></div>
+    <div >
+        <img id="logo-img" src="./logo.png" alt="A logo of Rampant Goats."></div>
         
         <div id="menu">
             <ul>
