Help page interactive and style matched with all other pages

--- a/client/Front-page/createcard.html
+++ b/client/Front-page/createcard.html
@@ -16,7 +16,7 @@
 
 <body>
 
-    <div id="logo-img">
+    <div>
         <img id="logo-img" src="./logo.png" alt="A logo of Rampant Goats."></div>
         
         <div id="menu">
