--- a/client/Front-page/account.html
+++ b/client/Front-page/account.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <div id="logo-img">
+    <div>
 
         <img id="logo-img" src="./logo.png" alt="A logo of Rampant Goats."></div>
         
