--- a/client/Front-page/help.html
+++ b/client/Front-page/help.html
@@ -11,9 +11,7 @@
     <link rel="stylesheet" href="./createcard.html">
     <link rel="stylesheet" href="./landing-page.html">
     <link rel="stylesheet" href="./subjects.html">
-
-    <script src="./index.js"></script>
-    <link rel="stylesheet" href="">
+    <script src="./help.js" defer></script>
 </head>
 <body>
     
@@ -31,17 +29,21 @@
     <div class="container">
     <h2>A guide on Rampant Goats Flashcards</h2>
    <div>
-    <p>
-        This guide is here to help you navigate through the app. <br>
-The <em><strong>“Categories” </strong></em> section describes all the subjects you can learn. Choose one to open a page with flashcards dedicated to that subject. <br>
-<em><strong>“Upload”</strong></em> section allows the user to create their own flashcards and add them to a chosen subject.<br>
+    <p>This guide is here to help you navigate through the app.</p>
+<p><strong>Subjects: </strong> section describes all the subjects you can learn. Choose one subject to be quizzed on with flashcards dedicated to that subject. On the subject page, </p>
+<p>Along with the subjects in the page, you will find an upload or create new flashcard button. This is where students, teacher and parents can create or upload their own flashcards. </p>
+<p><strong>Flashcards</strong><br><br>
 When you use the flashcards: <br>
 -	Press the <em><strong>“Answer”</strong></em> button, to reveal the answer to the question.<br>
 -	Press <em><strong>“Next”</strong></em> button to go to the next question<br>
 -	Press<em><strong>“Previous”</strong></em>  button to go back to the previous question<br>
-At the bottom of the screen you can see your progress.<br>
-At the end of each batch of flashcards you will see your score.<br> 
+-   Progress bar displayed at the bottom of the screen shows your progress.<br>
+-   The score tally will show how well you did in the flashcard quiz.<br> 
+<p><strong>Account: </strong> This section allows the users to create their own account to store their own flashcards of chosen subject.</p><br>
 
+<p><strong>Feedback</strong></p>
+<textarea name="textarea" id="" cols="50" rows="10" placeholder="Enter feedback here"></textarea><br>
+<button id="feedback-btn">Submit</button>
     </p></div>
    </div>
 </body>
