setup API tests

--- a/client/index-2.html
+++ b/client/index-2.html
@@ -80,7 +80,7 @@
                 <button id="previous-button-front">Previous</button>
             </div>
 
-            <div class = "back">
+            <div class = "back" id="back-flip">
                 <label class="flashcard-name" id = "backContent"></label><br>
                 <label class="corAnswer" id = "corAnswer"></label><br>
 
