Added new landing page

--- a/client/Front-page/help.html
+++ b/client/Front-page/help.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./subjects.html">
 
     <script src="./index.js"></script>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="./help.css">
 </head>
 <body>
     
@@ -23,7 +23,9 @@
         <ul>
 
             <li><a href="./landing-page.html">Home</a></li>
-
+            <li> <a href="./help.html">Help</a></li>
+            <li><a href="./account.html" title="Account page">Account</a></li>
+            <li><a href="./subjects.html">Subjects</a></li>
         </ul>
     </div>
     <p>
