Folders reorganised and all files location access updated.

--- a/client/assets/HTML/index-2.html
+++ b/client/assets/HTML/index-2.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flashcard display page</title>
     <script src="./assets/index-2.js" defer></script>
-    <link rel="stylesheet" href="./assets/styles-2.css">
+    <link rel="stylesheet" href="../CSS/styles-2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900;1000&display=swap"
@@ -19,11 +19,11 @@
     <!-- Navbar section start -->
     <nav class="navbar">
         <div class="navbar-items">
-            <button><a href="./Front-page/landing-page.html">Home</a></button>
-            <button><a href="./Front-page/subjects.html">Subjects</a></button>
+            <button><a href="../HTML/landing-page.html">Home</a></button>
+            <button><a href="../HTML/subjects.html">Subjects</a></button>
             <button id="switch-color">Switch Color</button>
-            <button><a href="./Front-page/help.html">Help</a></button>
-            <button><a href="./Front-page/account.html">Account</a></button>
+            <button><a href="../HTML/help.html">Help</a></button>
+            <button><a href="../HTML/account.html">Account</a></button>
         </div>
     </nav>
     <!-- Navbar section end -->
