--- a/client/assets/HTML/account.html
+++ b/client/assets/HTML/account.html
@@ -6,26 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Account</title>
-    <link rel="stylesheet" href="./account.css">
-    <link rel="stylesheet" href="./createcard.html">
-    <link rel="stylesheet" href="./help.html">
-    <link rel="stylesheet" href="./landing-page.html">
-    <link rel="stylesheet" href="./subjects.html">
-    <script src="./assets/account.js" defer></script>
-    <script src="./assets/userSession.js" defer></script>
+    <link rel="stylesheet" href="../CSS/account.css">
+    <script src="../JS/account.js" defer></script>
+    <script src="../JS/userSession.js" defer></script>
 </head>
 
 <body>
     <div>
 
-        <img id="logo-img" src="./logo.png" alt="A logo of Rampant Goats."></div>
+        <img id="logo-img" src="../images/logo.png" alt="A logo of Rampant Goats."></div>
         
         <div id="menu">
             <ul>
-                <li><a href="./help.html">Help</a></li>
-                <li><a href="./account.html">Account</a></li>
-                <li><a href="./subjects.html">Subjects</a></li>
-                <li><a href="./landing-page.html">Home</a></li>
+                <li><a href="../HTML/help.html">Help</a></li>
+                <li><a href="../HTML/account.html">Account</a></li>
+                <li><a href="../HTML/subjects.html">Subjects</a></li>
+                <li><a href="../HTML/landing-page.html">Home</a></li>
             </ul>
 
     </div>
