--- a/client/assets/HTML/createcard.html
+++ b/client/assets/HTML/createcard.html
@@ -6,25 +6,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Create Flashcard</title>
-  <link rel="stylesheet" href="./createcard.css">
-  <link rel="stylesheet" href="./help.html">
-  <link rel="stylesheet" href="./landing-page.html">
-  <link rel="stylesheet" href="./subjects.html">
-  <link rel="stylesheet" href="./account.html">
-  <script src="../assets/newCard.js" defer></script>
+  <link rel="stylesheet" href="../CSS/createcard.css">
+  <script src="../JS/newCard.js" defer></script>
 </head>
 
 <body>
 
     <div>
-        <img id="logo-img" src="./logo.png" alt="A logo of Rampant Goats."></div>
+        <img id="logo-img" src="../images/logo.png" alt="A logo of Rampant Goats."></div>
         
         <div id="menu">
             <ul>
-                <li><a href="">Help</a></li>
-                <li><a href="./account.html">Account</a></li>
-                <li><a href="./subjects.html">Subjects</a></li>
-                <li><a href="./landing-page.html">Home</a></li>
+                <li><a href="../HTML/help.html">Help</a></li>
+                <li><a href="../HTML/account.html">Account</a></li>
+                <li><a href="../HTML/subjects.html">Subjects</a></li>
+                <li><a href="../HTML/landing-page.html">Home</a></li>
             </ul></div>
     </div>
     <div class="container">
