--- a/client/assets/HTML/import.html
+++ b/client/assets/HTML/import.html
@@ -5,23 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Import</title>
-    <link rel="stylesheet" href="./import.css">
-    <script src="../assets/import.js" defer></script>
+    <title>Rampant Goats - Import</title>
+    <link rel="stylesheet" href="../CSS/import.css">
+    <script src="../JS/import.js" defer></script>
 
 </head>
 
 <body>
 
-    <div >
-        <img id="logo-img" src="./logo.png" alt="A logo of Rampant Goats."></div>
+    <div>
+        <img id="logo-img" src="../images/logo.png" alt="A logo of Rampant Goats."></div>
         
         <div id="menu">
             <ul>
-                <li><a href="./help.html">Help</a></li>
-                <li><a href="./account.html">Account</a></li>
-                <li><a href="./subjects.html">Subjects</a></li>
-                <li><a href="./landing-page.html">Home</a></li>
+                <li><a href="../HTML/help.html">Help</a></li>
+                <li><a href="../HTML/account.html">Account</a></li>
+                <li><a href="../HTML/subjects.html">Subjects</a></li>
+                <li><a href="../HTML/landing-page.html">Home</a></li>
             </ul>
     </div>
     <div class="container">
