--- a/client/assets/HTML/landing-page.html
+++ b/client/assets/HTML/landing-page.html
@@ -5,22 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rampant Goats</title>
-    <link rel="stylesheet" href="./landing-page.css">
-    <link rel="stylesheet" href="./createcard.html">
-    <link rel="stylesheet" href="./help.html">
-    <link rel="stylesheet" href="./account.html">
-    <link rel="stylesheet" href="./landing-page.html">
-    <link rel="stylesheet" href="./subjects.html">
+    <link rel="stylesheet" href="../CSS/landing-page.css">
 </head>
 <body>
     <div>
-        <img id="logo-img" src="./logo.png" alt="A logo of Rampant Goats."></div>
+        <img id="logo-img" src="../images/logo.png" alt="A logo of Rampant Goats."></div>
         <div id="menu">
         <ul>
-            <li> <a href="./help.html">Help</a></li>
-            <li><a href="./account.html" title="Account page">Account</a></li>
-            <li><a href="./subjects.html">Subjects</a></li>
-            <li id="home"><a id="home" href="./landing-page.html">Home</a></li>
+            <li><a href="../HTML/help.html">Help</a></li>
+            <li><a href="../HTML/account.html" title="Account page">Account</a></li>
+            <li><a href="../HTML/subjects.html">Subjects</a></li>
+            <li id="home"><a id="home" href="../HTML/landing-page.html">Home</a></li>
         </ul>
     </div>
     <div>
@@ -28,10 +23,10 @@
         <div class="container" >
             <div class="container1" id="sign-up">
                  <p>Rampant Goats is an excellent educational website for teachers and students. It has an extensive library of flashcards that covers topics from English, music, art and history. Teachers can also create their own flashcards to use in the classroom or to help students learn material outside of class. The flashcards are easy to use and can be tailored to meet the individual needs of each student. This makes Rampant Goats an invaluable educational resource for teachers and students alike.</p><br>
-                 <img class="images" id="img1" src="./english img.png" alt="" srcset="">
-                 <img class="images" id="img2" src="./History.png" alt="" srcset="">
-                 <img class="images" id="img3" src="./Music.png" alt="" srcset="">
-                 <img class="images" id="img4" src="./Art.png" alt="" srcset="">
+                 <img class="images" id="img1" src="../images/english img.png" alt="An image of literature elements in black and white.">
+                 <img class="images" id="img2" src="../images/History.png" alt="An image of Historical elements in black and white." >
+                 <img class="images" id="img3" src="../images/Music.png" alt="An image of musical instruments.">
+                 <img class="images" id="img4" src="../images/Art.png" alt="An image of oil painting of buildings separated by small ravine." srcset="">
         <!-- <p>More features to come include teachers and parental monitor of student learning progress, identification of student weaknesses, different difficulties of learning materials and many more.  </p> -->
             </div>
     </div>
