--- a/client/index-2.html
+++ b/client/index-2.html
@@ -8,6 +8,7 @@
     <title>Flashcard display page</title>
     <script src="./assets/index-2.js" defer></script>
     <link rel="stylesheet" href="./assets/styles-2.css">
+    <link rel="stylesheet" href="./assets/confetti.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900;1000&display=swap"
@@ -80,7 +81,7 @@
                 <button id="previous-button-front">Previous</button>
             </div>
 
-            <div class = "back" id="back-flip">
+            <div class = "back">    
                 <label class="flashcard-name" id = "backContent"></label><br>
                 <label class="corAnswer" id = "corAnswer"></label><br>
 
