--- a/client/Front-page/landing-page-1.html
+++ b/client/Front-page/landing-page-1.html
@@ -19,11 +19,11 @@
     <!-- Navbar section start -->
     <nav class="navbar">
         <div class="navbar-items">
-            <a href="./landing-page-1.html">Home</a>
-            <a href="./subjects.html">Subjects</a>
+            <a href="../assets/HTML/landing-page.html">Home</a>
+            <a href="../assets/HTML/subjects.html">Subjects</a>
             <a id="switch-color">Switch Color</a>
-            <a href="./help.html">Help</a>
-            <a href="./account.html">Account</a>
+            <a href="../assets/HTML/help.html">Help</a>
+            <a href="../assets/HTML/account.html">Account</a>
         </div>
     </nav>
     <!-- Navbar section end -->
@@ -41,19 +41,19 @@
         <section class="sidebar">
             <ul class="menu">
                 <li class="menu-item">
-                    <a href="./landing-page-1.html">Home</a>
+                    <a href="../assets/HTML/landing-page.html">Home</a>
                 </li><br>
                 <li class="menu-item">
-                    <a href="./subjects.html">Subjects</a>
+                    <a href="../assets/HTML/subjects.html">Subjects</a>
                 </li><br>
                 <li class="menu-item">
                     <a id="switch-color">Color</a>
                 </li><br>
                 <li class="menu-item">
-                    <a href="./help.html">Help</a>
+                    <a href="../assets/HTML/help.html">Help</a>
                 </li><br>
                 <li class="menu-item">
-                    <a href="./account.html">Account</a>
+                    <a href="../assets/HTML/account.html">Account</a>
                 </li>
             </ul>
         </section>
@@ -73,10 +73,10 @@
             <div>
                  <p>Rampant Goats is an excellent educational website for teachers and students. It has an extensive library of flashcards that covers topics from English, music, art and history. Teachers can also create their own flashcards to use in the classroom or to help students learn material outside of class. The flashcards are easy to use and can be tailored to meet the individual needs of each student. This makes Rampant Goats an invaluable educational resource for teachers and students alike.</p><br>
                  <div class="image-container">
-                    <img class="images" id="img1" src="./english img.png" alt="" srcset="">
-                 <img class="images" id="img2" src="./History.png" alt="" srcset="">
-                 <img class="images" id="img3" src="./Music.png" alt="" srcset="">
-                 <img class="images" id="img4" src="./Art.png" alt="" srcset="">
+                 <img class="images" id="img1" src="../assets/images/english img.png" alt="" srcset="">
+                 <img class="images" id="img2" src="../assets/images/History.png" alt="" srcset="">
+                 <img class="images" id="img3" src="../assets/images/Music.png" alt="" srcset="">
+                 <img class="images" id="img4" src="../assets/images/Art.png" alt="" srcset="">
                  </div>
         <!-- <p>More features to come include teachers and parental monitor of student learning progress, identification of student weaknesses, different difficulties of learning materials and many more.  </p> -->
             </div>
